--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,5 @@
 sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
-registry=https://registry.npm.taobao.org
+# registry=https://registry.npm.taobao.org
 sharp_dist_base_url=https://npm.taobao.org/mirrors/sharp-libvips/
 electron_mirror=https://npm.taobao.org/mirrors/electron/
 phantomjs_cdnurl=https://npm.taobao.org/mirrors/phantomjs/
