umi-natur 2.0 support umi 4

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@types/node": "^13.7.7",
     "@umijs/test": "^3.0.10",
     "@umijs/test-utils": "^1.0.0",
-    "@umijs/utils": "^3.3.7",
+    "@umijs/utils": "^4.0.19",
     "babel-plugin-import": "^1.13.3",
     "body-parser": "^1.18.2",
     "cross-env": "^6.0.3",
@@ -65,6 +65,7 @@
     "lib"
   ],
   "dependencies": {
+    "@umijs/bundler-utils": "^4.0.19",
     "natur": "^2.1.x",
     "natur-immer": "1.0.x",
     "natur-persist": "^1.2.x",
