--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "umi-natur",
-  "version": "1.1.7",
+  "version": "2.0.0-beta1",
   "main": "lib/index.js",
   "description": "auto config natur plugin",
   "authors": {
